fixed issue where text and image were overlapping when screen less wide in about

--- a/src/pages/About2.css
+++ b/src/pages/About2.css
@@ -1,26 +1,24 @@
 .title {
-    text-align: center;
+  text-align: center;
 }
 
 .about-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto 8rem;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto 8rem;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.imageContainer {
-    padding: auto 5em;
-  }
-
 .portraitBlue {
-    max-height: 35rem;
- }
+  max-width: 100%; /* Ensure the image doesn't overflow its container */
+  height: auto; /* Maintain the aspect ratio of the image */
+}
 
- .about {
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: white;
-    font-family: "Quicksand", sans-serif;
+.about {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: white;
+  font-family: "Quicksand", sans-serif;
+  padding: 0 3rem;
 }
